--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,34 @@
-# Compiled class files
+# Maven build
+target/
 *.class
 
-# Log files
+# Logs
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# Virtual machine crash logs
-hs_err_pid*
-
-# Maven target folder
-target/
-
-# IntelliJ IDEA project files
+# IDE settings
+.vscode/
 .idea/
 *.iml
-out/
 
-# VS Code settings
-.vscode/
-
-# Eclipse project files
-.project
-.classpath
-.settings/
-
-# Mac / Windows system files
+# OS files
 .DS_Store
 Thumbs.db
 
-# Temporary files
+# Maven build folders
+/target/
+/bin/
+/out/
+
+# IDE files
+*.iml
+*.log
+*.class
+
+# Screenshots / temp files
+*.png
+*.jpg
+*.jpeg
 *.tmp
+*.bak
 *.swp
+
